2008-12-05  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/38338
	* builtins.c (expand_builtin_apply_args): Put before parm_birth_insn
	only if internal_arg_pointer is a non-virtual pseudo.

2008-12-05  Joseph Myers  <joseph@codesourcery.com>

	* config/rs6000/rs6000.md (move_from_CR_gt_bit): Enable for
	TARGET_HARD_FLOAT && !TARGET_FPRS, not TARGET_E500.
	* config/rs6000/spe.md (e500_cr_ior_compare): Likewise.

2008-12-05  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/37716
	* gimplify.c (gimplify_expr): Allow COND_EXPR if
	gimplify_ctxp->allow_rhs_cond_expr.

2008-12-05  Uros Bizjak  <ubizjak@gmail.com>

	* config/alpha/alpha.c (alpha_fold_vector_minmax): Create
	VIEW_CONVERT_EXPR to convert output to long_integer_type_node.

	(alpha_emit_conditional_branch): Do not generate direct branch
	for UNORDERED comparisons.

2008-12-05  Andreas Schwab  <schwab@suse.de>

	* config/rs6000/linux-unwind.h (frob_update_context): Check for
	NULL lr.

2008-12-05  Jakub Jelinek  <jakub@redhat.com>

	PR c/38408
	* fold-const.c (fold_checksum_tree): Change buf type to union
	tree_node.

2008-12-05  Sebastian Pop  <sebastian.pop@amd.com>

	PR bootstrap/38262
	* Makefile.in (LIBS): Remove GMPLIBS, CLOOGLIBS and PPLLIBS.
	(BACKENDLIBS): New.
	(cc1-dummy, cc1): Add BACKENDLIBS, remove GMPLIBS.

2008-12-05  Ben Elliston  <bje@au.ibm.com>

	* c-parser.c (c_parser_enum_specifier): Initialise ident_loc and
	comma_loc.
	(c_parser_initelt): Initialise des_loc and ellipsis_loc.

2008-12-04  Eric Botcazou  <ebotcazou@adacore.com>
	    Gary Funck  <gary@intrepid.com>

	* cse.c (lookup_as_function): Delete mode frobbing code.
	(equiv_constant): Re-implement it there for SUBREGs.

2008-12-04  Richard Guenther  <rguenther@suse.de>

	PR middle-end/36509
	* Makefile.in (tree-ssa-alias-warnings.o): Remove.
	(tree-ssa-structalias.o): Remove errors.h dependency.
	(tree-ssa-reassoc.o): Likewise.
	* tree-ssa-reassoc.c: Do not include errors.h.
	* tree-ssa-alias-warnings.c: Remove.